--- a/composer.json
+++ b/composer.json
@@ -2,7 +2,8 @@
     "name": "imane/slim0319",
     "type": "project",
     "require": {
-        "slim/slim": "^3.12"
+        "slim/slim": "^3.12",
+        "squizlabs/php_codesniffer": "^3.4"
     },
     "authors": [
         {
